<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ProductSearchActivity">

    <SearchView
        android:id="@+id/searchViewProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:queryHint="@string/searchMeli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewProduct" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:progressTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeSearchWelcomeContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewProduct">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_productList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="arrowup.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_below="@id/animation_productList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Realiza una búsqueda"
            style="@style/SearchTitle"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/errorSearchContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewProduct">

        <ImageView
            android:id="@+id/imgSearchError"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_search"/>

        <TextView
            android:id="@+id/textErrorTitle"
            android:layout_below="@id/imgSearchError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:layout_centerInParent="true"
            android:text="@string/searchErrorTitle"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textErrorSubTitle"
            android:layout_below="@id/textErrorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotolight"
            android:layout_centerInParent="true"
            android:text="@string/searchErrorSubTitle"
            android:textAlignment="center"
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/errorNetworkContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewProduct">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_productList_noconexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="networkerror.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/textNetworkErrorTitle"
            android:layout_below="@id/animation_productList_noconexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotobold"
            android:layout_centerInParent="true"
            android:text="@string/NetworkErrorTitle"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textNetworkErrorSubTitle"
            android:layout_below="@id/textNetworkErrorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotolight"
            android:layout_centerInParent="true"
            android:text="@string/NetworkErrorSubTitle"
            android:textAlignment="center"
            android:textSize="15sp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>