<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ProductDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_photo_holder"
            android:padding="6dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/productCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nuevo"
                    style="@style/ProductCondition"/>

                <TextView
                    android:id="@+id/productTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loremexample"
                    style="@style/ProductTitleDetail"/>

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 4500"
                    style="@style/ProductPriceDetail"/>

                <TextView
                    android:id="@+id/productShipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Envio"
                    style="@style/ProductSubTitle"/>

                <TextView
                    android:id="@+id/productAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Adress"
                    style="@style/ProductAdress"/>

                <TextView
                    android:id="@+id/productMercadoPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Acepta mercado libre"
                    android:layout_marginTop="10dp"
                    style="@style/ProductMercadoPago"/>

                <Button
                    android:layout_marginTop="40dp"
                    android:id="@+id/buttonComprar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/robotobold"
                    android:background="@drawable/button_comprar"
                    android:text="@string/comprarProduct"/>

                <Button
                    android:id="@+id/buttonAgregarAlCarrito"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/robotobold"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/button_agregarcarrito"
                    android:text="@string/agregarAlCarrito"/>

         </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>